[package]
name = "gaymwtf-core"
version = "0.1.0"
edition = "2021"
authors = ["BenimFurka <furkajr@mail.ru>"]
description = "A modular 2D game engine and framework built with Rust and Macroquad."
license = "GPL-3.0"
repository = "https://github.com/BenimFurka/gaymwtf-core"
keywords = ["game-engine", "2d", "macroquad", "ecs"]
categories = ["game-engines", "rendering"]

[dependencies]
macroquad = "0.4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
futures = "0.3"
log = { version = "0.4", features = ["std"] }
miniquad = "0.4.5"
anyhow = "1.0.86"
image = { version = "0.24.9", default-features = false, features = ["png"] }

[lib]
name = "gaymwtf_core"
path = "src/lib.rs"

[profile.release]
debug = false

[[example]]
name = "gaymwtf-test"
doc = true
