[package]
name = "gaymwtf-core"
version = "0.2.0"
edition = "2021"
authors = ["BenimFurka <furkajr@mail.ru>"]
description = "A modular 2D game engine and framework built with Rust and Macroquad."
license = "GPL-3.0"
repository = "https://github.com/BenimFurka/gaymwtf-core"
keywords = ["game-engine", "2d", "macroquad", "ecs"]
categories = ["game-engines", "rendering"]

[dependencies]
anyhow = "1.0.98"
futures = "0.3.31"
image = { version = "0.25.6", default-features = false, features = ["png"] }
lazy_static = "1.5.0"
log = { version = "0.4.27", features = ["std"] }
macroquad = "0.4.14"
miniquad = "0.4.8"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[lib]
name = "gaymwtf_core"
path = "src/lib.rs"

[profile.release]
debug = false

[[example]]
name = "example"
doc = true

[[example]]
name = "world"
doc = false

[[example]]
name = "ui"
doc = false